# GPTuesday_Vectorstores

./: README.md  pyproject.toml  text_example_1.json  text_example_2.json  text_example_3.json
READMEs/: README.accompanying_youtube_video_script.md  README.getting_started.md
src/: main.py
